# OnliDesk_Full

./: .gitignore  README.md
.bmad-core/: install-manifest.yaml  user-guide.md
.trae/rules/: project_rules.md
docs/: architecture-overview.md  architecture.md  coding-standards.md  core-components.md  data-flow-and-communication.md  prd.md  project-brief.md  source-tree.md  tech-stack.md  technologies-and-dependencies.md
docs/architecture/: architecture-overview.md  core-components.md  data-flow-and-communication.md  technologies-and-dependencies.md
docs/prd/: epic-1.md  introduction.md  non-functional-requirements.md  product-goals-and-objectives.md  project-scope-mvp.md  target-audience.md  user-stories-and-acceptance-criteria.md
docs/stories/: 1.1.remote-access-foundation.md  1.2.secure-file-transfer.md
src/client/: CMakeLists.txt
src/client/config/: file_transfer_approval.ini
src/client/examples/: file_transfer_approval_example.cpp
src/client/filetransfer/: README_APPROVAL_SYSTEM.md
src/client/src/filetransfer/: ApprovalDialog.cpp  ApprovalDialog.h  CMakeLists.txt  FileTransferManager.cpp  FileTransferManager.h  FileTransferSession.cpp  FileTransferWorker.cpp  integration_example.cpp  progress_widget.cpp  progress_widget.h  transfer_dialog.cpp  transfer_dialog.h
src/portal/backend/: package-lock.json  package.json
src/portal/frontend/: package-lock.json  package.json
src/portal/frontend/src/components/FileTransfer/: FileDownload.jsx  FileTransferManager.jsx  FileTransferManager.test.jsx  FileUpload.jsx  TransferList.jsx
src/portal/frontend/src/components/RemoteAccess/: PrivilegeEscalation.jsx  RemoteAccessDashboard.jsx  RemoteAccessPortal.jsx  SessionManager.jsx  index.js
src/portal/frontend/src/hooks/: useFileTransfer.js  useRemoteAccess.js
src/portal/frontend/src/services/: FileTransferService.js  RemoteAccessService.js
src/server/: config.json
src/server/cmd/: main.go
src/server/internal/filetransfer/: audit.go  config.go  file_stream.go  security.go  transfer_handler.go  transfer_handler_test.go  transfer_session.go  websocket_handler.go
src/server/internal/remoteaccess/: audit.go  config.go  http_handlers.go  session.go  session_manager.go  websocket_handler.go
src/server/static/portal/: index.html
tests/client/file_transfer/: ApprovalDialogTest.cpp  CMakeLists.txt  FileTransferManagerTest.cpp
tests/portal/components/FileTransfer/: FileTransferService.test.js
tests/server/file_transfer/: transfer_handler_test.go
